--- a/CSS/style.css
+++ b/CSS/style.css
@@ -21,3 +21,33 @@ td {
   background-color: rgba(255,255,255,0.2);
   color: black;
 }
+.centered-text {
+    text-align: center;
+  }
+  .container {
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+    
+  }
+  .box {
+    width: 50%;
+    margin: 5px;
+    box-sizing: border-box;
+    display: flex;
+    background-color: #F6F1F1;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    padding: 10px;
+    border: 1px solid #FFDFDF;
+  }
+  .box img {
+    max-width: 100%; 
+    height: 50%; 
+    margin: 10px; 
+    box-sizing: border-box;
+  }
+  .news-category {
+    border: 1px solid black;
+  }
